--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <img class="comingsoon" src="./images/mfpc_cs-01.png" alt="mfpc">
         <img class="footlogoleft" src="./images/mfpc1-011.png" alt="ftlogo">
         <img class="footlogoright" src="./images/mfpc4-011.png" alt="ftlogo">
-        <div class="arrow_down">
-            <a href="javascript:" id="return-to-top" class="down">
-            </a>
+        <div class="scrolldown">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </header>
 
