--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MFPC</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
     <header class="logo">
+        <div id="snackbar"></div>
+        <div class="info">
+            <input id="email-info" value="xyz@marchforthpeoplecraft.com"></input>
+            <input id="whatsapp-info" value="9990009903"></input>
+        </div>
+        <div class="icons">
+            <a id="email" href="#"><i class="fa fa-envelope"></i></a>
+            <a id="whatsapp" href="#"><i class="fa fa-whatsapp"></i></a>
+        </div>
         <img class="footlogo" src="./images/mfpc-01-foot1.png" alt="ftlogo">
         <img class="name" src="./images/mfpc5-01.png" alt="mfpc">
         <img class="comingsoon" src="./images/mfpc_cs-01.png" alt="mfpc">
