--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header class="logo">
         <div id="snackbar"></div>
         <div class="info">
-            <input id="email-info" value="xyz@marchforthpeoplecraft.com"></input>
-            <input id="whatsapp-info" value="9990009903"></input>
+            <input id="email-info" value="xyz@marchforthpeoplecraft.com" readonly></input>
+            <input id="whatsapp-info" value="9990009903" readonly></input>
         </div>
         <div class="icons">
             <a id="email" href="#"><i class="fa fa-envelope"></i></a>
