Changed Main Logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a id="whatsapp" href="#"><i class="fa fa-whatsapp"></i></a>
         </div>
         <img class="footlogo" src="./images/mfpc-01-foot1.png" alt="ftlogo">
-        <img class="name" src="./images/mfpc5-01.png" alt="mfpc">
+        <img class="name" src="./images/mfpc_hr-01.png" alt="mfpc">
         <img class="comingsoon" src="./images/mfpc_cs-01.png" alt="mfpc">
         <img class="footlogoleft" src="./images/mfpc1-011.png" alt="ftlogo">
         <img class="footlogoright" src="./images/mfpc4-011.png" alt="ftlogo">
