--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
         <div id="snackbar"></div>
         <div class="info">
             <input id="email-info" value="xyz@marchforthpeoplecraft.com" readonly></input>
-            <input id="whatsapp-info" value="9990009903" readonly></input>
         </div>
         <div class="icons">
             <a id="email" href="#"><i class="fa fa-envelope"></i></a>
-            <a id="whatsapp" href="#"><i class="fa fa-whatsapp"></i></a>
         </div>
         <img class="footlogo" src="./images/mfpc-01-foot1.png" alt="ftlogo">
-        <img class="name" src="./images/mfpc_hr-01.png" alt="mfpc">
+        <img class="name" src="./images/hrba4-01.png" alt="mfpc">
         <img class="comingsoon" src="./images/mfpc_cs-01.png" alt="mfpc">
         <img class="footlogoleft" src="./images/mfpc1-011.png" alt="ftlogo">
         <img class="footlogoright" src="./images/mfpc4-011.png" alt="ftlogo">
